# Warm-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  run.ps1
backend/alembic/: env.py
backend/alembic/versions/: 38c9ee921d84_feat_initial_tables_session_and_message.py  8b8a0b4796e0_add_file_search_enum_value.py  fe9dce86cd52_add_file_search_columns_to_session.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  chat.py  file_search.py  history.py  search.py
backend/app/core/: config.py  database.py  logging.py
backend/app/db/: base.py  models.py
backend/app/schemas/: chat.py  common.py  file_search.py  history.py  search.py
backend/app/services/: __init__.py  exa_service.py  file_search_service.py  history_service.py  llm_service.py
backend/app/tests/api/: conftest.py  test_chat_api.py  test_search_api.py
backend/app/tests/core/: test_config.py  test_exa.py  test_gemini.py  test_logging.py  test_schemas.py
backend/app/tests/services/: test_exa_service.py  test_llm_service.py
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AppHeader.tsx  ChatMessage.tsx  CompanyCard.tsx  FileCitationPreview.tsx  FileSearchMessage.tsx  FileUploadZone.tsx  HistorySidebar.tsx  ModeSelector.tsx  OmniInput.tsx  PersonCard.tsx  (+4 more)
notebooks/: .env.example  exa_ai.ipynb  gemini_sdk.ipynb  pyproject.toml  sample.txt  servless_rag.ipynb
(+4 files in other folders)
